// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/queries/getVoteReceipt returns the correct string depending on what the contract call returns 1`] = `
Object {
  "voteSupport": "AGAINST",
}
`;

exports[`api/queries/getVoteReceipt returns the correct string depending on what the contract call returns 2`] = `
Object {
  "voteSupport": "FOR",
}
`;

exports[`api/queries/getVoteReceipt returns the correct string depending on what the contract call returns 3`] = `
Object {
  "voteSupport": "ABSTAIN",
}
`;
